--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <form action="checkLogin.php" method="post" name="from1">
+  <form action="checkLogin.php" method="post" name="from1" autocomplete="off">
 	<div align="center">
     <div name="username">
       <p>Username</p>
@@ -21,6 +21,7 @@
     <div name="submit">
       <input type="submit" />
     </div>
+		<a href="signin.php">sign up here.</a>
 	</div>
   </form>
 </body>
